--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-gradio==4.44.1
+gradio==5.9.1
 google-generativeai>=0.8.0
 numpy<2.0.0
 pillow>=10.0.0
@@ -6,7 +6,6 @@ python-dotenv>=1.0.0
 midiutil>=1.2.0
 music21>=9.1.0
 pydub>=0.25.0
-jsonschema>=4.0.0
+jsonschema<4.18.0
 requests>=2.31.0
-huggingface-hub<0.24.0
 
