--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,123 @@
-venv/
+# Python
 __pycache__/
-.env
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+ENV/
+env/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Project specific
 *.wav
+*.mp3
 *.mid
-debug_api.py
-list_models.py
-test_imports.py
+*.midi
+*.log
+.env
+*.pem
+*.p12
+*.crt
+*.key
+
+# Hugging Face Spaces
+.huggingface/
+.spaces/
+.hfignore
+
+# Streamlit
+.streamlit/secrets.toml
+
+# Docker
+Dockerfile
+.dockerignore
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# Logs
+logs/
+*.log
+
+# Local development
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Media files
+media/
+uploads/
+
+# Static files
+staticfiles/
+*.css
+*.js
+*.map
+
+# Cache
+.cache/
+.pytest_cache/
+.mypy_cache/
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# VS Code
+.vscode/settings.json
+.vscode/launch.json
+.vscode/extensions.json
+
+# PyCharm
+.idea/workspace.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/inspectionProfiles/
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.Trash-*
+.nfs*
