Mise à jour de la configuration pour le déploiement sur Hugging Face Spaces

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,8 +3,13 @@ port = 7860
 address = "0.0.0.0"
 enableCORS = false
 enableXsrfProtection = false
+enableWebsocketCompression = true
+maxUploadSize = 200
+maxMessageSize = 200
 
 [browser]
+serverAddress = "0.0.0.0"
+serverPort = 7860
 gatherUsageStats = false
 
 [theme]
@@ -13,3 +18,9 @@ backgroundColor = "#ffffff"
 secondaryBackgroundColor = "#f0f2f6"
 textColor = "#262730"
 font = "sans serif"
+
+[runner]
+fastRerun = true
+
+[client]
+showErrorDetails = true
