Sécurisation des clés API et amélioration de la documentation
- Suppression des clés API exposées
- Mise à jour du .gitignore pour ignorer les fichiers sensibles
- Ajout d'un fichier .env.example
- Mise à jour de la documentation sur la gestion des clés API

--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,15 @@ wheels/
 .installed.cfg
 
 # Fichiers de configuration et d'environnement
-
+.env
+.secrets.toml
 .venv
 venv/
 ENV/
+
+# Fichiers de configuration Streamlit
+.streamlit/secrets.toml
+secrets.toml
 env/
 
 # Fichiers temporaires
